@@ -93,7 +93,7 @@ $res = phpAds_dbQuery("SELECT * FROM ".$phpAds_config['tbl_clients']." WHERE par
 while ($row = phpAds_dbFetchArray($res))
 	$extra .= "<option value='".$row['clientid']."'>".phpAds_buildClientName($row['clientid'], $row['clientname'])."</option>";
 
-$extra .= "</select>&nbsp;<input type='image' src='images/go_blue.gif'><br>";
+$extra .= "</select>&nbsp;<input type='image' name='moveto' src='images/go_blue.gif'><br>";
 $extra .= "<img src='images/break.gif' height='1' width='160' vspace='4'><br>";
 $extra .= "<img src='images/icon-recycle.gif' align='absmiddle'>&nbsp;<a href='banner-delete.php?campaignid=$campaignid&bannerid=$bannerid'".phpAds_DelConfirm($strConfirmDeleteBanner).">$strDelete</a><br>";
 $extra .= "</form>";
